# Damage-Responsive-Reconfiguration

./: .gitignore  README.md  main.py  module.py  pyproject.toml
docs/: problem_statement.md
examples/: test_bench_example.py  visualize_pivots.py
src/: README.md  __init__.py  configurations.py  dual_quaternion.py  modular_system.py  test_bench.py  udqdg_system.py  visualizer.py
