[project]
name = "damage-responsive-reconfiguration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imageio>=2.37.0",
    "kaleido>=1.1.0",
    "loguru>=0.7.3",
    "manim>=0.19.0",
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "numpy>=2.3.3",
    "plotly>=6.3.1",
    "pyprojroot>=0.3.0",
    "pyvista>=0.46.3",
]
